# algorithms

./: .ccls  .gitattributes  .gitignore  1.cpp  Makefile  feature.md  log.md  makefile  noicpputils.h  noicpputils.hpp  readme.md  snips.md  template.cpp  template_normal.cpp  test.cpp
FunnyCode/tree_travel_use_while/: makefile  tree_travel_use_while.cpp
UltiSnips/: c.snippets  cpp.snippets  cpp_template.snippets  sh.snippets
UltiSnips/base/: base.snippets  define.snippets  for.snippets  random.snippets  stl.snippets  template.snippets  二分.snippets  优化.snippets  向量星_网络流.snippets  常用函数.snippets  快读.snippets  离散化.snippets
UltiSnips/data_structure/: Bit.snippets  RMQ.snippets  UnionFind.snippets  queue.snippets  segment_tree.snippets  链式前向星.snippets
UltiSnips/math/: euler_function.snippets  gcd.snippets  快速幂.snippets
UltiSnips/python/: extend.snippets
UltiSnips/utils/: combine.snippets  常用函数.snippets
algo/: base.hpp  linked_forward_start.hpp  log.hpp  math.hpp  timer.hpp  utils.hpp
algo/algorithms/: binary_search.hpp
autoload/: TODO  r_algorithm.vim  ralgo.vim
autoload/ralgo/: data.vim
docs/: graphviz.md  lazyvim.md  utils.md
docs/Streams/: readme.md
examples/: 1.cpp  adjacencyList.cpp  bipartile_graph_color.cpp  debug.cpp  linkList.cpp  makefile  memory_string.cpp  tarjan_scc.cpp
examples/base/: yank_adaptor.cpp
include/: allocator.hpp  base.hpp  clock.hpp  data.hpp  define.hpp  knapsnap.hpp  math.hpp  memory.hpp  more_ranges.hpp  queue.hpp  random.hpp  random_data.hpp  stack.hpp  timer.hpp  utils.hpp
minimal/: myAllocator.hpp  readme.md
src/: __graphviz.h  __linkList.h  clock.cpp  random.cpp  random_data.cpp  timer.cpp
template/: dsu_on_tree.txt  template.cpp
test/: CMakeLists.txt  download_catch.sh  fastIO.cpp  linkList.cpp  readme.md  test_1.cpp  test_cycle_view.cpp  test_macro.cpp  test_permutation.cpp  yankAdaptor.cpp
test/Streams/: CMakeLists.txt
test/Streams/providers/: Filter.cpp  Iterator.cpp
test/functional/: CMakeLists.txt  lambda.cpp
tools/: color.hpp  debug.hpp  table.hpp
unitest/: 1.cpp  binary_search.hpp  graphviz.cpp  main.cpp  makefile  table_debug.cpp
vimPlugin/: TODO
(+89 files in other folders)
